--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -263,3 +263,19 @@ span.gn-user-name.ng-binding :hover {
 [ng-app="gn_admin"] .gn-top-bar .navbar-collapse {
     padding-left: 15px;
 }
+
+.show-on-focus-only {
+    margin-top: -40px;
+    margin-left: 10px;
+    top: 0;
+    left: 0;
+    padding: 8px;
+    position: absolute;
+    transform: translateX(-200%);
+    transition: transform 0.3s;
+    z-index: 10000;
+    &:focus {
+      transform: translateX(0%);
+      outline: 2px auto @brand-warning !important;
+    }
+}
