--- a/nrw/geonetwork/catalog/views/default/templates/index.html
+++ b/nrw/geonetwork/catalog/views/default/templates/index.html
@@ -2,8 +2,9 @@
   data-ng-class="fluidHeaderLayout ? 'container-fluid' : 'container'"
   data-ng-controller="gnsScrollController"
 >
+  <!-- Changed button class to match the facets button introduced for accessibility - previously btn-warning -->
   <button
-    class="btn btn-warning gn-skiplink"
+    class="btn btn-default gn-skiplink"
     type="button"
     data-ng-click="gotoAnchor('main-content')"
     data-ng-class="gnCfg.mods.header.enabled && gnCfg.mods.header.isLogoInHeader ? 'gn-skiplink-top' : 'gn-skiplink-nav'"
