--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -279,3 +279,18 @@ span.gn-user-name.ng-binding :hover {
       outline: 2px auto @brand-warning !important;
     }
 }
+
+.facets-homepage {
+    font-weight: bold;
+    color: #fff;
+    font-size: 14px;
+}
+
+.facets-homepage :hover {
+    text-decoration: underline;
+}
+
+.flex-align-items-center {
+    display: flex !important;
+    align-items: center;
+}
