--- a/nrw/geonetwork/catalog/views/default/templates/home.html
+++ b/nrw/geonetwork/catalog/views/default/templates/home.html
@@ -88,7 +88,8 @@
   </div>
   <!-- /.gn-row-main -->
 
-  <form
+  <!-- Removed from NRW's homepage for accessibility reasons -->
+  <!-- <form
     data-ng-if="showMaps"
     class="form-horizontal"
     role="form"
@@ -111,9 +112,9 @@
           data-template-url="resultTemplate"
         ></div>
       </div>
-    </div>
+    </div> -->
     <!-- /.gn-top-records -->
-  </form>
+  <!-- </form> -->
 
   <div class="row" data-ng-show="searchInfo.hits.total.value == 0">
     <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
