--- a/nrw/geonetwork/catalog/views/default/templates/recordView/title.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/title.html
@@ -22,7 +22,8 @@
       data-ng-if="mdView.current.record.resourceAltTitle && mdView.current.record.resourceAltTitle.length > 0"
       >
       <div>
-        <h3 data-translate="">alternateTitle</h3>
+        <!-- Changed from h3 to a h2 to imrpove the document outline for accessibility reasons -->
+        <h2 data-translate="" style="font-size: 14px; margin-bottom: 5px;">alternateTitle</h2>
         <ul style="list-style-type: none;">
           <li data-ng-repeat="t in mdView.current.record.resourceAltTitle">
             {{t}}
