--- a/nrw/geonetwork/catalog/views/default/templates/results.html
+++ b/nrw/geonetwork/catalog/views/default/templates/results.html
@@ -23,6 +23,7 @@
                 class="btn btn-default show-on-focus-only"
                 type="button"
                 data-ng-click="gotoAnchor('search-results')"
+                role="button"
             >
                 <span translate="">skipToResults</span>
             </button>
