--- a/nrw/geonetwork/catalog/components/pages/partials/menu-page.html
+++ b/nrw/geonetwork/catalog/components/pages/partials/menu-page.html
@@ -27,18 +27,20 @@
         title="{{page.label}}"
         href="{{page.link}}"
         target="{{page.link.indexOf('http') === 0 ? '_blank' : '_self'}}"
+        role="link"
       >
         <span
           data-ng-show="page.icon && page.icon.length > 0"
           class="fa fa-fw {{page.icon}}"
         ></span>
-        <span>{{page.label}}</span>
+        <span role="presentation">{{page.label}}</span>
       </a>
       <a
         data-ng-show="!submenuExternalLink"
         data-gn-active-tb-item="{{gnCfg.mods.page.appUrl + '/' + page.pageId}}?page={{page.pageId}}"
         title="{{page.pageId}}"
         data-ng-click="changePage($event)"
+        role="link"
       >
         <span
           data-ng-show="page.icon && page.icon.length > 0"
@@ -51,11 +53,9 @@
   <a
     data-ng-if="!isSubmenu && page"
     data-ng-show="isExternalLink"
-    title="{{page.label}}"
     href="{{page.link}}"
     target="_blank"
     role="link"
-    aria-label="{{page.label}}"
   >
     <span
       data-ng-show="page.icon && page.icon.length > 0"
@@ -71,7 +71,6 @@
     title="{{page.pageId}}"
     data-ng-click="changePage($event)"
     role="link"
-    aria-label="{{page.label}}"
   >
     <span
       data-ng-show="page.icon && page.icon.length > 0"
