--- a/nrw/geonetwork/catalog/components/toolbar/partials/menu-sitename.html
+++ b/nrw/geonetwork/catalog/components/toolbar/partials/menu-sitename.html
@@ -1,4 +1,4 @@
-<li class="clearfix hidden-xs" data-ng-show="gnCfg.mods.home.enabled" role="menuitem">
+<li class="clearfix hidden-xs" data-ng-show="gnCfg.mods.home.enabled" role="presentation">
     <!-- Remove link to homepage for NRW accessibility -->
     <!-- Set the alt attribute to be empty for NRW accessibility - previously set to {{'siteLogo' | translate}} -->
     <img
@@ -8,7 +8,7 @@
         alt=""
         data-ng-src="{{gnUrl}}../images/logos/{{info['node/id'] || info['system/site/siteId']}}.png?random{{info['system/site/lastUpdate']}}"
       />
-    <a class="pull-left gn-logo-link" data-gn-active-tb-item="{{gnCfg.mods.home.appUrl}}">
+    <a class="pull-left gn-logo-link" data-gn-active-tb-item="{{gnCfg.mods.home.appUrl}}" role="link">
         <span
             class="gn-name gn-margin-left hidden-sm"
             data-ng-if="gnCfg.mods.header.showGNName"
