move autofocus attribute on homepage from the search bar to the cookie message. Fixes accessibility issue in SUPPORT-20231/NRW bug ref 169616

--- a/nrw/geonetwork/catalog/views/default/templates/home.html
+++ b/nrw/geonetwork/catalog/views/default/templates/home.html
@@ -32,12 +32,12 @@
         class="col-md-offset-3 col-md-6"
         data-ng-if="!showHealthIndexError"
       >
+        <!-- Removed autofocus attribute for accessibility -->
         <div class="input-group gn-form-any">
           <input
             type="text"
             role="combobox"
             class="form-control input-lg"
-            autofocus=""
             autocomplete="off"
             data-ng-model="homeAnyField"
             data-ng-model-options="modelOptions"
