Updated instructions and code for get-next-identifier

--- a/nrw/geonetwork/catalog/templates/editor/new-metadata-horizontal.html
+++ b/nrw/geonetwork/catalog/templates/editor/new-metadata-horizontal.html
@@ -101,7 +101,7 @@
               <span data-translate="">nextAvailableIdentifier</span>
             </div>
             <div class="panel-body">
-                <iframe src="../../dashboards/goto/b622a350-fd6d-11ee-b30f-53f8ed1d3666?auth_provider_hint=anonymous1" style="border:none; height: 100%; width: 100%;"/>
+                <iframe src="../../dashboards/app/dashboards?auth_provider_hint=anonymous1#/view/32818b40-070b-11ef-b9a4-4d67516fcf38?embed=true&_g=(filters%3A!())&hide-filter-bar=true" style="border:none; height: 100%; width: 100%;"/>
                 <p data-translate="" class="gn-margin-top">nextAvailableIdentifierGuidance</p>
             </div>
         </div>
