add padding to tags on full view. Fixes accessibility issue in SUPPORT-20249/NRW bug ref 169640

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -303,4 +303,5 @@ span.gn-user-name.ng-binding :hover {
     word-break: break-word;
     white-space: normal;
     text-align: left;
+    padding: 2px 5px;
 }
