--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -197,6 +197,8 @@ span.gn-user-name.ng-binding :hover {
 
 .gn-facet .gn-facet-container a span {
     color: #007485;
+    // add padding to improve accessibility
+    padding: 4px 0px;
 }
 
 .gn-facet .gn-facet-container a span :hover{
@@ -303,5 +305,6 @@ span.gn-user-name.ng-binding :hover {
     word-break: break-word;
     white-space: normal;
     text-align: left;
+    // add padding to improve accessibility
     padding: 2px 5px;
 }
