change star colour in search bar. Fixes accessibility issue in SUPPORT-20199/NRW bug ref 169592

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -308,3 +308,8 @@ span.gn-user-name.ng-binding :hover {
     // add padding to improve accessibility
     padding: 2px 5px;
 }
+
+// change element colour to imrpove accessibility
+[data-ng-search-form] .gn-top-search .gn-form-any .btn-favorites .text-warning {
+    color: #007485;
+}
