change colour and button type for various elements to improve contrast. Fixes accessibility issue in SUPPORT-20203/NRW bug ref 169595

--- a/nrw/geonetwork/catalog/components/cookieWarning/partials/cookieWarning.html
+++ b/nrw/geonetwork/catalog/components/cookieWarning/partials/cookieWarning.html
@@ -7,11 +7,13 @@
     </p>
     <!-- Added autofocus attribute for accessibility -->
     <p class="cookie-warning-actions" autofocus="">
-      <button class="btn btn-info" data-ng-click="acceptCookies()" data-translate="">
+      <!-- Changed button type for accessibility -->
+      <button class="btn btn-primary" data-ng-click="acceptCookies()" data-translate="">
         acceptCookie
       </button>
       <span data-translate="">or</span>
-      <button class="btn btn-info" data-ng-click="goAway()" data-translate="">
+      <!-- Changed button type for accessibility -->
+      <button class="btn btn-primary" data-ng-click="goAway()" data-translate="">
         rejectCookie
       </button>
     </p>
