increase font size for various elements. Fixes accessibility issue in SUPPORT-20203/NRW bug ref 169595

--- a/nrw/geonetwork/catalog/style/inspire/iti-i18n-code.css
+++ b/nrw/geonetwork/catalog/style/inspire/iti-i18n-code.css
@@ -11,8 +11,9 @@
     content: "Cyfleusterau amaethyddol a dyframaethu";
   }
 
+  /* added spaces to help text wrapping */
   .inspire-am-cy .inspire-label:before {
-    content: "Parthau rheoli/cyfyngu/rheoleiddio ac unedau adrodd";
+    content: "Parthau rheoli / cyfyngu / rheoleiddio ac unedau adrodd";
   }
 
   .inspire-au-cy .inspire-label:before {
@@ -137,7 +138,7 @@
 
   /* English translations */
 
-.inspire-ac-en .inspire-label:before {
+  .inspire-ac-en .inspire-label:before {
     content: "Atmospheric conditions";
   }
 
@@ -149,8 +150,9 @@
     content: "Agricultural and\A aquaculture facilities";
   }
 
+   /* added spaces to help text wrapping */
   .inspire-am-en .inspire-label:before {
-    content: "Area management/restriction/\A regulation zones and reporting units";
+    content: "Area management / restriction / \A regulation zones and reporting units";
   }
 
   .inspire-au-en .inspire-label:before {
