fixed horizontal scroll on 400% zoom. Fixes accessibility issue in SUPPORT-20233/NRW bug ref 169619

--- a/nrw/geonetwork/catalog/views/default/templates/results.html
+++ b/nrw/geonetwork/catalog/views/default/templates/results.html
@@ -82,7 +82,8 @@
               ></div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 text-center">
+            <!-- Reduced maximum width used by this to prevent horizontal scroll at 400% zoom -->
+            <div class="col-xs-11 col-sm-6 text-center">
               <div
                 class=""
                 data-gn-pagination="paginationInfo"
@@ -113,7 +114,8 @@
             ></div>
           </div>
           <div class="row">
-            <div class="col-xs-12 gn-nopadding-left gn-nopadding-right">
+            <!-- Reduced maximum width used by this to prevent horizontal scroll at 400% zoom -->
+            <div class="col-xs-11 gn-nopadding-left gn-nopadding-right">
               <span class="loading fa fa-spinner fa-spin" data-ng-show="searching"></span>
 
               <div
@@ -145,7 +147,8 @@
                 <i class="fa fa-fw fa-chevron-up" />
               </button>
             </div>
-            <div class="col-xs-12 col-sm-6 text-center">
+            <!-- Reduced maximum width used by this to prevent horizontal scroll at 400% zoom -->
+            <div class="col-xs-11 col-sm-6 text-center">
               <div
                 class=""
                 data-gn-pagination="paginationInfo"
